changed meta data + added exported js files

--- a/index.htm
+++ b/index.htm
@@ -18,8 +18,8 @@
             <meta property="og:type" content="makerhub.studio" />
             <meta property="og:site_name" content="makerhub.studio" />
             <meta property="og:url" content="https://makerhub.studio" />
-            <meta property="og:title" content="makerhub.studio ~ Level Link Preview" />
-            <meta property="og:description" content="Share your Super Mario Maker 2 levels with our easy to use preview tool!" />
+            <meta property="og:title" content="makerhub.studio ~ Worldmap Creator" />
+            <meta property="og:description" content="Share your Super Mario Maker 2 adventures with our easy to use worldmap creator!" />
             <meta property="og:image" content="https://makerhub.studio/assets/img/socialHeader.jpg" />
         </head>
         <body>
@@ -41,6 +41,8 @@
             </main>
 
             <script src="assets/js/simplex-noise.js"></script>
+            <script src="assets/js/tiles.js"></script>
+            <script src="assets/js/generation.js"></script>
             <script src="assets/js/app.js"></script>
             <script src="assets/js/ui.js"></script>
         </body>
